--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/fontawesome-free-5.12.1-web/css/all.css" >
     <link rel="stylesheet" href="css/index.css">
@@ -22,7 +22,8 @@
     </div>
 
     <p id="slogan">Software engineer</p>
-     
+    
+    <button id="go-back-button">Menu</button>
     <!-- menu -->
     <header id="menu">
         <p id="about-me"> <a href="">About Me</a> </p>
