bug fixes (menu button)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <p id="slogan">Software engineer</p>
     
-    <button id="go-back-button">Menu</button>
+    <button id="go-back-button"> <i class="fas fa-chevron-left"></i> Menu</button>
     <!-- menu -->
     <header id="menu">
         <p id="about-me"> <a href="">About Me</a> </p>
