fixed position of header in responsive mode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="header-name-ldm">
-        <h1 id="name">Ziyad</h1>
+        <h1 id="name">Zeyad</h1>
         <span id="switch-ldm-logo">
             <div id="switch-container">
                 <img src="images/moon.svg" alt="">
@@ -23,7 +23,7 @@
 
     <p id="slogan">Software engineer</p>
     
-    <button id="go-back-button"> <i class="fas fa-chevron-left"></i> Menu</button>
+    <div id="go-back-button"> <i class="fas fa-chevron-left"></i> Menu</div>
     <!-- menu -->
     <header id="menu">
         <p id="about-me"> <a href="">About Me</a> </p>
