--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fontawesome-free-5.12.1-web/css/all.css" >
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="images/z-icon.ico" type="image/x-icon">
