small update : watermark and styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:800,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ad9cb0368b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="images/z-icon.ico" type="image/x-icon">
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <div id="watermark">ZEYAD</div>
     <div id="header-name-ldm">
         <h1 id="name">Zeyad</h1>
         <span id="switch-ldm-logo">
