--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- About me -->
     <section id="about-me-section" class="section">
 			<h2>About me</h2>
-			<p>- I am a Full Stack Web Developer from Mauritania. I have a passion for creating seamless,beautiful and creative websites, I have experience with various programming languages and specifically web technologies. Life is a continuous learning process, so work makes me more rigorous. I am currently available to hire.<br>
+			<p>- I am a Full Stack Web Developer from Mauritania. I have a passion for creating seamless, beautiful and creative websites. I have experience with various programming languages and specifically web technologies. Life is a continuous learning process, so work makes me more rigorous. I am currently available to hire.<br>
 			<a href="mailto:ziyadkader@gmail.com"> Get in touch</a></p>
     </section>
     
