fix icons display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div>
     <div class="watermark">ZEYAD</div>
     <div class="watermark">ZEYAD</div>
+    <div class="watermark">ZEYAD</div>
     <div id="header-name-ldm">
         <h1 id="name">Zeyad</h1>
         <span id="switch-ldm-logo">
