ui fix and updates

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <h4>Web Backend <img class="section-logos" src="./images/backend.svg"></h4>
                 <ul>
                     <li skill-description="Node"> <li skill-description="Sass"><object type="image/svg+xml" data="images/node-dot-js.svg"></object>Node</li>
+                    <li skill-description="express"><object type="image/svg+xml" data="images/node-dot-js.svg"></object>Express</li>
                     <li skill-description="Laravel"><object type="image/svg+xml" data="images/laravel.svg"></object>Laravel</li>
                     <li skill-description="Django"><object type="image/svg+xml" data="images/django.svg"></object>Django</li>
                     <li skill-description="Flask"><object type="image/svg+xml" data="images/flask.svg"></object>Flask</li>
@@ -114,6 +115,7 @@
                 <h4>Databases<img class="section-logos" src="./images/database.svg"></h4>
                 <ul>
                     <li  skill-description="Mysql"><object type="image/svg+xml" data="images/mysql.svg"></object>Mysql</li>
+                    <li  skill-description="mongodb"><object type="image/svg+xml" data="images/mongodb.svg"></object>Mongodb</li>
                     <li  skill-description="Oracle"><object type="image/svg+xml" data="images/oracle.svg"></object>Oracle</li>
                 </ul>
             </section>
