--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <section>
                 <h4>Mobile <img class="section-logos" src="./images/phone.svg"></h4>
                 <ul>
-                    <li  skill-description="Flutter"><object type="image/svg+xml" data="images/flutter.svg"></object>Flutter</li>
+                    <li  skill-description="react-native"><object type="image/svg+xml" data="images/react.svg"></object>React native</li>
                 </ul>
             </section> 
             
